# parity-server

./: .env  .eslintrc.json  .flowconfig  .gitignore  .travis.yml  Procfile  README.md  app.js  app.py  asset-manifest.json  build.gradle  cli.py  config.js  config.py  dedupe.py  dev  docker-compose.yml  fetch_teams.py  game_601.dump  game_601.json  game_601_points.json  game_602.dump  game_602.json  game_602_points.json  game_603.dump  game_603.json  game_603_points.json  html_page  index.html  init_db.py  manifest.json  models.py  notes.md  package.json  pgloader.command  player_comparer.coffee  precache-manifest.00f627c489a110947d56a2647f5cdb93.js  precache-manifest.08ba179ad832de2efc871cd2c2833afb.js  precache-manifest.3571322289000ad09cec207fdb98a293.js  precache-manifest.808a72bcc53f39fef6f623a28dc6303a.js  (+21 more)
.circleci/: config.yml
.github/: dependabot.yml
android/: .gitignore  build.gradle  keystore.jks
app/: build.gradle  parse_job.js  parser.js  server.js  upload_job.js
client/: package.json
config/: config.js  routes.js
data/: backfill.rb  ocua_17-18_test.json
db/: week01_game1.json  week01_game2.json  week01_game3.json  week01_game4.json  week02_game1.json  week02_game2.json  week02_game3.json  week02_game4.json  week03.json  week03_game1.json  week03_game2.json  week03_game3.json  week03_game4.json  week04_game1.json  week04_game2.json  week04_game3.json  week05_game1.json  week05_game2.json  week05_game3.json  week05_game4.json  week06_game1.json  week06_game2.json  week06_game3.json  week07_game1.json  week07_game2.json  week07_game3.json  week08_game1.json  week08_game2.json  week08_game3.json  week08_game4.json  week09_game2.json  week09_game3.json  week09_game4.json  week10_game1.json  week10_game2.json  week10_game4.json  week11_game1.json  week11_game2.json  week11_game4.json  week12_game1.json  (+9 more)
docs/: android_release.md  production.md
jobs/: parse_job.js
lib/: calc_player.js  calc_salaries.js  calc_stats.js  calc_stats_new.js  calc_teams.js  calc_total_stats.js  calc_week.js  calc_week_num.js  event_parser.js  fetch_teams.js  stats_calculator.py  teams_cache.js  test_stats_calculator.py
models/: game.py  player.py  stats.py
node_server/: config.js
prod/: README.md  copy-db.sh  deploy.sh
public/: package.json
routes/: games.js  index.js  stats.js  teams.js  upload.js  weeks.js
script/: README.md  docker-compose.yml
server/: .#app.py  admin.py  api.py  app.py  backup.py  cli.py  config.py  db.py  index.js  init_db.py  models.py  schema.py  seed.py  stats_calculator.py  test.py  tests.py  upload.py  utils.py  zuluru_sync.py
test/: calc_salaries_test.js  parse_job_test.js  parser_test.js  server_test.js
views/: index.handlebars
web/: .gitignore  (+6 more)
(+1504 files in other folders)
