[project]
name = "parity-server"
version = "0.1.0"
description = "OCUA Parity Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.4",
    "click==8.2.1",
    "fastapi>=0.115.12",
    "fastapi-cache2>=0.2.2",
    "gunicorn==23.0.0",
    "pydantic>=2.11.4",
    "pytest==7.4.3",
    "requests==2.32.3",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "syrupy>=4.9.1",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.0.20250515",
    "ruff>=0.11.11",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
from-first = true
section-order = [
  "third-party",
  "first-party",
]
