[project]
name = "parity-server"
version = "0.1.0"
description = "OCUA Parity Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "fastapi[standard]>=0.115.12",
    "gunicorn==25.3.0",
    "pydantic>=2.11.4",
    "pytest>=9.0.3",
    "requests==2.33.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "syrupy>=4.9.1",
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.33.0.20260408",
    "ruff>=0.11.11",
    "pytest-mock>=3.15.1",
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
from-first = true
section-order = [
  "third-party",
  "first-party",
]
